@@ -52,6 +52,8 @@ Architectural changes
 Bug fixes
 ---------
 
+- Fix for issue #236 (crash on restart using periodicity).
+
 - Fix for idilat>3 algo. and isstpp>1 (beta or NVD/TVD limiters) compatibility.
 
 Release 5.0.0 (June 2 2017)
